# subastas_boe_parser

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  readme.MD
include/: AuctionPersister.hpp  Charset.hpp  Credentials.hpp  CurlUtils.hpp  DummyPersister.hpp  HTMLParsing.hpp  Parser.hpp  ThreadPool.hpp  Utils.hpp
resouces/: login.txt
src/: AuctionPersister.cpp  Charset.cpp  DummyPersister.cpp  HTMLParsing.cpp  Parser.cpp  ThreadPool.cpp  main.cpp
